# deepfake-detection

./: .gitignore  README.md  main.py  pyproject.toml  submission.csv  task.ipynb
configs/: base.yaml  data_preprocessing_c0.yaml  data_preprocessing_c23.yaml  efn4_fpn_sbi_adv.yaml
losses/: losses.py
models/: utils.py
package_utils/: cam_vis.py  face_processing.py
