[project]
name = "deepfake-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "torch==1.12.1",
    "torchvision==0.13.1",
    "numpy==1.23.5",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "opencv-python-headless==4.9.0.80",
    "pandas==2.0.3",
    "tensorboardX==2.5.1",
    "imgaug==0.4.0",
    "scikit-image==0.19.3",
    "albumentations==1.1.0",
    "python-box==7.1.1",
    "ipykernel>=6.31.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["data*", "arg_data*", "model*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
